# OpenAgent

./: .gitignore  GUIDE.md  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  mcp_server.py  schemas.py
backend/app/core/: __init__.py  config.py
backend/app/providers/: __init__.py  base.py  byok.py  local.py  openai_compatible.py  registry.py
backend/app/routers/: __init__.py  chat.py  dom.py  extension.py  health.py  providers.py
backend/app/services/: actions.py  chat.py  consent.py  dom_analysis.py  extension_bridge.py  page_context.py
backend/tests/: test_actions.py  test_api.py  test_dom.py  test_prompt.py  test_providers.py
docker/: Dockerfile.backend  docker-compose.yml
docs/: architecture.md  development.md
extension/: eslint.config.js  package.json  sidepanel.html  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: types.ts
extension/src/background/: index.ts
extension/src/lib/: api.test.ts  api.ts  chrome.ts  profile.test.ts  profile.ts
extension/src/options/: main.tsx
extension/src/popup/: main.tsx
extension/src/sidepanel/: main.tsx  styles.css
scripts/: verify.ps1
shared/mcp/: browser-tools.json
