[project]
name = "openagent-backend"
version = "0.1.0"
description = "MCP-first agent gateway for OpenAgent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.9,<2",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1"
]

[dependency-groups]
dev = [
  "black>=24.10,<26",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
